changed movie to Vimeo embed

--- a/filme.html
+++ b/filme.html
@@ -27,8 +27,8 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 </div>
 <div id="menu">
 <ul id="nav">
-<li><a href="index.html" title="Início" class="top">Início</a></li>
-<li><a href="curso.html" title="O 26º. Curso de Comandos" class="top">O 26º.
+<li><a href="index.html" title="Inï¿½cio" class="top">Inï¿½cio</a></li>
+<li><a href="curso.html" title="O 26ï¿½. Curso de Comandos" class="top">O 26ï¿½.
 Curso de Comandos</a>
 <ul>
 	<li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
@@ -38,8 +38,8 @@ Curso de Comandos</a>
 </ul>
 </li>
 <li><a href="companhia.html" title="A Companhia" class="top">A Companhia</a></li>
-<li><a href="operacoes.html" title="As Operações" class="top">As Operações</a>
-<ul><li><a href="operacoes.html" title="As Operações" class="top">As Operações</a></li>
+<li><a href="operacoes.html" title="As Operaï¿½ï¿½es" class="top">As Operaï¿½ï¿½es</a>
+<ul><li><a href="operacoes.html" title="As Operaï¿½ï¿½es" class="top">As Operaï¿½ï¿½es</a></li>
 <li><a href="operacoes.html#FotosEmParada" title="Fotos em Parada" class="top">Fotos em Parada</a></li>
 <li><a href="operacoes.html#HistoriaOperacional" title="Hist&oacute;ria Operacional" class="top">Hist&oacute;ria Operacional</a></li>
 </ul></li>
@@ -49,13 +49,13 @@ Amadora</a></li>
 <li><a href="galeria.html" title="Galeria" class="top">Galeria</a>
 <ul>
 <li><a href="EmPose/index.html" title="Em Pose">Em Pose</a></li>
-<li><a href="voltadamesa/index.html" title="À volta da mesa">À volta da mesa</a></li>
-<li><a href="almocosconvivio/index.html" title="Almoços-Convívio">Almoços-Convívio</a></li>
+<li><a href="voltadamesa/index.html" title="ï¿½ volta da mesa">ï¿½ volta da mesa</a></li>
+<li><a href="almocosconvivio/index.html" title="Almoï¿½os-Convï¿½vio">Almoï¿½os-Convï¿½vio</a></li>
 </ul>
 </li>
-<li><a href="mais_informacoes.html" title="Mais Informações" class="top">Mais Informações</a>
+<li><a href="mais_informacoes.html" title="Mais Informaï¿½ï¿½es" class="top">Mais Informaï¿½ï¿½es</a>
 <ul>
-<li><a href="mais_informacoes.html#Noticias" title="Notícias" class="top">Notícias</a></li>
+<li><a href="mais_informacoes.html#Noticias" title="Notï¿½cias" class="top">Notï¿½cias</a></li>
 <li><a href="mais_informacoes.html#Testemunhos" title="Testemunhos" class="top">Testemunhos</a></li>
 <li><a href="mais_informacoes.html#MuitoImportante" title="Muito Importante" class="top">Muito Importante</a></li>
 </ul>
@@ -72,7 +72,7 @@ Amadora</a></li>
 <div id="content">
 <h2 align="center">Filme da 2042&ordf; Companhia de Comandos</h2>
 <div align="center"><br>
- <object width="320" height="250"
+ <!--<object width="320" height="250"
 classid="clsid:02BF25D5-8C17-4B23-BC80-D3488ABDDC6B"
 codebase="http://www.apple.com/qtactivex/qtplugin.cab">
 <param name="src" value="2042CC.mov">
@@ -84,7 +84,12 @@ autoplay="true" controller="false"
 pluginspage="http://www.apple.com/quicktime/download/">
 </embed>
 
-</object>  
+</object>  -->
+<iframe
+ src="//player.vimeo.com/video/110055772?title=0&amp;byline=0&amp;portrait=0&amp;color=b20000&amp;autoplay=1"
+ width="320" height="240" frameborder="0"
+ webkitallowfullscreen mozallowfullscreen allowfullscreen>
+</iframe>
       <br>
       <br>
       <br>
