Replace characters with HTML entity

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 </div>
 <div id="menu">
 <ul id="nav">
-<li><a href="index.html" title="Início" class="top">Início</a></li>
-<li><a href="curso.html" title="O 26º. Curso de Comandos" class="top">O 26º.
-Curso de Comandos</a>
+<li><a href="index.html" title="In&iacute;cio" class="top">In&iacute;cio</a></li>
+<li><a href="curso.html" title="O 26&ordm;. Curso de Comandos" class="top">O 26&ordm;.
+  Curso de Comandos</a>
 <ul>
 	<li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
     <li><a href="curso.html#AccaoPsicologica">A  Ac&ccedil;&atilde;o Psicol&oacute;gica</a></li>
@@ -38,8 +38,8 @@ Curso de Comandos</a>
 </ul>
 </li>
 <li><a href="companhia.html" title="A Companhia" class="top">A Companhia</a></li>
-<li><a href="operacoes.html" title="As Operações" class="top">As Operações</a>
-<ul><li><a href="operacoes.html" title="As Operações" class="top">As Operações</a></li>
+<li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a>
+<ul><li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a></li>
 <li><a href="operacoes.html#FotosEmParada" title="Fotos em Parada" class="top">Fotos em Parada</a></li>
 <li><a href="operacoes.html#HistoriaOperacional" title="Hist&oacute;ria Operacional" class="top">Hist&oacute;ria Operacional</a></li>
 </ul></li>
@@ -49,13 +49,13 @@ Amadora</a></li>
 <li><a href="galeria.html" title="Galeria" class="top">Galeria</a>
 <ul>
 <li><a href="EmPose/index.html" title="Em Pose">Em Pose</a></li>
-<li><a href="voltadamesa/index.html" title="À volta da mesa">À volta da mesa</a></li>
-<li><a href="almocosconvivio/index.html" title="Almoços-Convívio">Almoços-Convívio</a></li>
+<li><a href="voltadamesa/index.html" title="&Aacute; volta da mesa">&Aacute; volta da mesa</a></li>
+<li><a href="almocosconvivio/index.html" title="Almo&ccedil;os-Conv&iacute;vio">Almo&ccedil;os-Conv&iacute;vio</a></li>
 </ul>
 </li>
-<li><a href="mais_informacoes.html" title="Mais Informações" class="top">Mais Informações</a>
+<li><a href="mais_informacoes.html" title="Mais Informa&ccedil;&otilde;es" class="top">Mais Informa&ccedil;&otilde;es</a>
 <ul>
-<li><a href="mais_informacoes.html#Noticias" title="Notícias" class="top">Notícias</a></li>
+<li><a href="mais_informacoes.html#Noticias" title="Not&iacute;cias" class="top">Not&iacute;cias</a></li>
 <li><a href="mais_informacoes.html#Testemunhos" title="Testemunhos" class="top">Testemunhos</a></li>
 <li><a href="mais_informacoes.html#MuitoImportante" title="Muito Importante" class="top">Muito Importante</a></li>
 </ul>
@@ -71,28 +71,28 @@ Amadora</a></li>
 <td>
 <div id="content">
 <h2 align="center"><br>
-  <img src="inicio.jpg" alt="MAMA SUMÉ
+  <img src="inicio.jpg" alt="MAMA SUME&#33;
 
 
-BEM-VINDO AO SITE DA 2042ª COMPANHIA DE COMANDOS
+BEM-VINDO AO SITE DA 2042&ordm; COMPANHIA DE COMANDOS
 
 
-A 2042ª COMPANHIA DE COMANDOS SERVIU EM ANGOLA NOS ANOS DE 1973/74
+A 2042&ordm; COMPANHIA DE COMANDOS SERVIU EM ANGOLA NOS ANOS DE 1973/74
 
-FEZ O CURSO DE COMANDOS NO CIC – ANGOLA
+FEZ O CURSO DE COMANDOS NO CIC - ANGOLA
 
 OPEROU NO NORTE E NO LESTE DE ANGOLA
 
-INTEGROU A PARTIR DE AGOSTO DE 1974 O BATALHÃO E O REGIMENTO DE COMANDOS DA AMADORA
+INTEGROU A PARTIR DE AGOSTO DE 1974 O BATALH&#xC3;O E O REGIMENTO DE COMANDOS DA AMADORA
 
-PASSOU À DISPONIBILIDADE EM 03 DE JANEIRO DE 1975
+PASSOU &#xC0; DISPONIBILIDADE EM 03 DE JANEIRO DE 1975
 
-ORGANIZA ANUALMENTE UM ALMOÇO-CONVÍVIO E MANTÉM VIVOS OS LAÇOS DE CAMARADAGEM E AMIZADE QUE A UNEM HÁ 35 ANOS
-
-
+ORGANIZA ANUALMENTE UM ALMO&#xC7;O-CONV&#xCD;VIO E MANT&#xC9;M VIVOS OS LA&#xC7;OS DE CAMARADAGEM E AMIZADE QUE A UNEM H&#xC1; 35 ANOS
 
 
-Não temos saudades da guerra mas nunca esqueceremos as condições duras em que a nossa camaradagem foi forjada
+
+
+N&#xE3;o temos saudades da guerra mas nunca esqueceremos as condi&#xE7;&#xF5;es duras em que a nossa camaradagem foi forjada
 " /><br>
   <br>
   <br>
