Fix some more accents and latin characters.

--- a/galeria.html
+++ b/galeria.html
@@ -27,19 +27,19 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 </div>
 <div id="menu">
 <ul id="nav">
-<li><a href="index.html" title="Início" class="top">Início</a></li>
-<li><a href="curso.html" title="O 26º. Curso de Comandos" class="top">O 26º.
-Curso de Comandos</a>
+<li><a href="index.html" title="In&iacute;cio" class="top">In&iacute;cio</a></li>
+<li><a href="curso.html" title="O 26&ordm;. Curso de Comandos" class="top">O 26&ordm;.
+  Curso de Comandos</a>
 <ul>
-	<li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
+    <li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
     <li><a href="curso.html#AccaoPsicologica">A  Ac&ccedil;&atilde;o Psicol&oacute;gica</a></li>
     <li><a href="curso.html#CerimoniaEncerramento">Cerim&oacute;nia  de Encerramento</a></li>
   	<li><a href="curso.html#HistoriaSucindadoCurso">Hist&oacute;ria Sucinta</a></li>
 </ul>
 </li>
 <li><a href="companhia.html" title="A Companhia" class="top">A Companhia</a></li>
-<li><a href="operacoes.html" title="As Operações" class="top">As Operações</a>
-<ul><li><a href="operacoes.html" title="As Operações" class="top">As Operações</a></li>
+<li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a>
+<ul><li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a></li>
 <li><a href="operacoes.html#FotosEmParada" title="Fotos em Parada" class="top">Fotos em Parada</a></li>
 <li><a href="operacoes.html#HistoriaOperacional" title="Hist&oacute;ria Operacional" class="top">Hist&oacute;ria Operacional</a></li>
 </ul></li>
@@ -49,13 +49,13 @@ Amadora</a></li>
 <li><a href="galeria.html" title="Galeria" class="top">Galeria</a>
 <ul>
 <li><a href="EmPose/index.html" title="Em Pose">Em Pose</a></li>
-<li><a href="voltadamesa/index.html" title="À volta da mesa">À volta da mesa</a></li>
-<li><a href="almocosconvivio/index.html" title="Almoços-Convívio">Almoços-Convívio</a></li>
+<li><a href="voltadamesa/index.html" title="&Aacute; volta da mesa">&Aacute; volta da mesa</a></li>
+<li><a href="almocosconvivio/index.html" title="Almo&ccedil;os-Conv&iacute;vio">Almo&ccedil;os-Conv&iacute;vio</a></li>
 </ul>
 </li>
-<li><a href="mais_informacoes.html" title="Mais Informações" class="top">Mais Informações</a>
+<li><a href="mais_informacoes.html" title="Mais Informa&ccedil;&otilde;es" class="top">Mais Informa&ccedil;&otilde;es</a>
 <ul>
-<li><a href="mais_informacoes.html#Noticias" title="Notícias" class="top">Notícias</a></li>
+<li><a href="mais_informacoes.html#Noticias" title="Not&iacute;cias" class="top">Not&iacute;cias</a></li>
 <li><a href="mais_informacoes.html#Testemunhos" title="Testemunhos" class="top">Testemunhos</a></li>
 <li><a href="mais_informacoes.html#MuitoImportante" title="Muito Importante" class="top">Muito Importante</a></li>
 </ul>
@@ -92,7 +92,7 @@ Amadora</a></li>
 	</tr>
 	<tr>
 		<td class="thumbcell"><a href="EmPose/photo8.html"><img src="EmPose/photo8_small.jpg" title="4108" alt="photo8_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="EmPose/quartelnolusoautosuficinciacomando.html"><img src="EmPose/quartelnolusoautosuficinciacomando_small.jpg" title="4109 - Quartel no Luso - Auto suficiência comando" alt="quartelnolusoautosuficinciacomando_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="EmPose/quartelnolusoautosuficinciacomando.html"><img src="EmPose/quartelnolusoautosuficinciacomando_small.jpg" title="4109 - Quartel no Luso - Auto sufici&#xEA;ncia comando" alt="quartelnolusoautosuficinciacomando_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="EmPose/photo9.html"><img src="EmPose/photo9_small.jpg" title="4110" alt="photo9_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="EmPose/photo10.html"><img src="EmPose/photo10_small.jpg" title="4112" alt="photo10_small.jpg" /></a></td>
 	</tr>
@@ -198,7 +198,7 @@ Amadora</a></li>
   <br>
   <br>
   <div id="header">
-      <h2>À volta da mesa </h2>
+      <h2>&Aacute; volta da mesa </h2>
    </div>
    
 <div id="index">
@@ -252,7 +252,7 @@ Amadora</a></li>
   <br>
   <br>
   <br>  <div id="header">
-      <h2>Almoços-Convívio</h2>
+      <h2>Almo&ccedil;os-Conv&iacute;vio</h2>
    </div>
    
 <div id="index">
