--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ Amadora</a></li>
 <td>
 <div id="content">
 <h2 align="center"><br>
-  <img src="inicio.jpg" alt="MAMA SUME&#33;
+  <img src="inicio.jpg" alt="MAMA SUME
 
 
 BEM-VINDO AO SITE DA 2042&ordm; COMPANHIA DE COMANDOS
