--- a/companhia.html
+++ b/companhia.html
@@ -61,8 +61,8 @@ font-weight:bold;
 </div>
 <div id="menu">
 <ul id="nav">
-<li><a href="index.html" title="Início" class="top">Início</a></li>
-<li><a href="curso.html" title="O 26º. Curso de Comandos" class="top">O 26º.
+<li><a href="index.html" title="In&iacute;cio" class="top">In&iacute;cio</a></li>
+<li><a href="curso.html" title="O 26&ordm;. Curso de Comandos" class="top">O 26&ordm;.
 Curso de Comandos</a>
 <ul>
 	<li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
@@ -72,8 +72,8 @@ Curso de Comandos</a>
 </ul>
 </li>
 <li><a href="companhia.html" title="A Companhia" class="top">A Companhia</a></li>
-<li><a href="operacoes.html" title="As Operações" class="top">As Operações</a>
-<ul><li><a href="operacoes.html" title="As Operações" class="top">As Operações</a></li>
+<li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a>
+<ul><li><a href="operacoes.html" title="As Opera&ccedil;&otilde;es" class="top">As Opera&ccedil;&otilde;es</a></li>
 <li><a href="operacoes.html#FotosEmParada" title="Fotos em Parada" class="top">Fotos em Parada</a></li>
 <li><a href="operacoes.html#HistoriaOperacional" title="Hist&oacute;ria Operacional" class="top">Hist&oacute;ria Operacional</a></li>
 </ul></li>
@@ -83,13 +83,13 @@ Amadora</a></li>
 <li><a href="galeria.html" title="Galeria" class="top">Galeria</a>
 <ul>
 <li><a href="EmPose/index.html" title="Em Pose">Em Pose</a></li>
-<li><a href="voltadamesa/index.html" title="À volta da mesa">À volta da mesa</a></li>
-<li><a href="almocosconvivio/index.html" title="Almoços-Convívio">Almoços-Convívio</a></li>
+<li><a href="voltadamesa/index.html" title="&Aacute; volta da mesa">&Aacute; volta da mesa</a></li>
+<li><a href="almocosconvivio/index.html" title="Almo&ccedil;os-Conv&iacute;vio">Almo&ccedil;os-Conv&iacute;vio</a></li>
 </ul>
 </li>
-<li><a href="mais_informacoes.html" title="Mais Informações" class="top">Mais Informações</a>
+<li><a href="mais_informacoes.html" title="Mais Informa&ccedil;&otilde;es" class="top">Mais Informa&ccedil;&otilde;es</a>
 <ul>
-<li><a href="mais_informacoes.html#Noticias" title="Notícias" class="top">Notícias</a></li>
+<li><a href="mais_informacoes.html#Noticias" title="Not&iacute;cias" class="top">Not&iacute;cias</a></li>
 <li><a href="mais_informacoes.html#Testemunhos" title="Testemunhos" class="top">Testemunhos</a></li>
 <li><a href="mais_informacoes.html#MuitoImportante" title="Muito Importante" class="top">Muito Importante</a></li>
 </ul>
