Fix character errors.

--- a/curso.html
+++ b/curso.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html><head><title>O Curso</title>
+<html><head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>O Curso</title>
 
 <link href="css.css" type="text/css" rel="stylesheet">
 <script type="text/javascript"><!--//--><![CDATA[//><!--
@@ -34,8 +36,8 @@ if (window.attachEvent) window.attachEvent("onload", sfHover);
 </div>
 <div id="menu">
 <ul id="nav">
-<li><a href="index.html" title="Início" class="top">Início</a></li>
-<li><a href="curso.html" title="O 26º. Curso de Comandos" class="top">O 26º.
+<li><a href="index.html" title="InÃ­cio" class="top">InÃ­cio</a></li>
+<li><a href="curso.html" title="O 26&ordm;. Curso de Comandos" class="top">O 26&ordm;.
 Curso de Comandos</a>
 <ul>
 	<li><a href="curso.html#ImagensdoCurso">Imagens do curso</a></li>
@@ -45,8 +47,8 @@ Curso de Comandos</a>
 </ul>
 </li>
 <li><a href="companhia.html" title="A Companhia" class="top">A Companhia</a></li>
-<li><a href="operacoes.html" title="As Operações" class="top">As Operações</a>
-<ul><li><a href="operacoes.html" title="As Operações" class="top">As Operações</a></li>
+<li><a href="operacoes.html" title="As OperaÃ§Ãµes" class="top">As OperaÃ§Ãµes</a>
+<ul><li><a href="operacoes.html" title="As OperaÃ§Ãµes" class="top">As OperaÃ§Ãµes</a></li>
 <li><a href="operacoes.html#FotosEmParada" title="Fotos em Parada" class="top">Fotos em Parada</a></li>
 <li><a href="operacoes.html#HistoriaOperacional" title="Hist&oacute;ria Operacional" class="top">Hist&oacute;ria Operacional</a></li>
 </ul></li>
@@ -56,13 +58,13 @@ Amadora</a></li>
 <li><a href="galeria.html" title="Galeria" class="top">Galeria</a>
 <ul>
 <li><a href="EmPose/index.html" title="Em Pose">Em Pose</a></li>
-<li><a href="voltadamesa/index.html" title="À volta da mesa">À volta da mesa</a></li>
-<li><a href="almocosconvivio/index.html" title="Almoços-Convívio">Almoços-Convívio</a></li>
+<li><a href="voltadamesa/index.html" title="Ã€ volta da mesa">Ã€ volta da mesa</a></li>
+<li><a href="almocosconvivio/index.html" title="AlmoÃ§os-ConvÃ­vio">AlmoÃ§os-ConvÃ­vio</a></li>
 </ul>
 </li>
-<li><a href="mais_informacoes.html" title="Mais Informações" class="top">Mais Informações</a>
+<li><a href="mais_informacoes.html" title="Mais InformaÃ§Ãµes" class="top">Mais InformaÃ§Ãµes</a>
 <ul>
-<li><a href="mais_informacoes.html#Noticias" title="Notícias" class="top">Notícias</a></li>
+<li><a href="mais_informacoes.html#Noticias" title="NotÃ­cias" class="top">NotÃ­cias</a></li>
 <li><a href="mais_informacoes.html#Testemunhos" title="Testemunhos" class="top">Testemunhos</a></li>
 <li><a href="mais_informacoes.html#MuitoImportante" title="Muito Importante" class="top">Muito Importante</a></li>
 </ul>
@@ -120,8 +122,8 @@ Amadora</a></li>
 	<tr>
 		<td class="thumbcell"><a href="FotosdoCurso/a6.html"><img src="FotosdoCurso/a6_small.jpg" title="1118-A" alt="a6_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="FotosdoCurso/b2.html"><img src="FotosdoCurso/b2_small.jpg" title="1118-B" alt="b2_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="FotosdoCurso/provaindividualdecombateprovadefogomombaafinaldaprova.html"><img src="FotosdoCurso/provaindividualdecombateprovadefogomombaafinaldaprova_small.jpg" title="1119 - Prova Individual de Combate (Prova de Fogo) - Mombaça - Final da prova." alt="provaindividualdecombateprovadefogomombaafinaldaprova_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="FotosdoCurso/provadereaces.html"><img src="FotosdoCurso/provadereaces_small.jpg" title="1120 -( Prova de Reacções)" alt="provadereaces_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="FotosdoCurso/provaindividualdecombateprovadefogomombaafinaldaprova.html"><img src="FotosdoCurso/provaindividualdecombateprovadefogomombaafinaldaprova_small.jpg" title="1119 - Prova Individual de Combate (Prova de Fogo) - MombaÃ§a - Final da prova." alt="provaindividualdecombateprovadefogomombaafinaldaprova_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="FotosdoCurso/provadereaces.html"><img src="FotosdoCurso/provadereaces_small.jpg" title="1120 -( Prova de ReacÃ§Ãµes)" alt="provadereaces_small.jpg" /></a></td>
 		<td class="thumbcell"></td>
 		<td class="thumbcell"></td>
 	</tr>
@@ -144,7 +146,7 @@ Amadora</a></li>
 	<tr>
 		<td class="thumbcell"><a href="AccaoPsicologica/photo4.html"><img src="AccaoPsicologica/photo4_small.jpg" title="1204" alt="photo4_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/verso4.html"><img src="AccaoPsicologica/verso4_small.jpg" title="1204-verso" alt="verso4_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="AccaoPsicologica/notemverso.html"><img src="AccaoPsicologica/notemverso_small.jpg" title="1205 (não tem verso)" alt="notemverso_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="AccaoPsicologica/notemverso.html"><img src="AccaoPsicologica/notemverso_small.jpg" title="1205 (nÃ£o tem verso)" alt="notemverso_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/photo5.html"><img src="AccaoPsicologica/photo5_small.jpg" title="1206" alt="photo5_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/verso5.html"><img src="AccaoPsicologica/verso5_small.jpg" title="1206-verso" alt="verso5_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/photo6.html"><img src="AccaoPsicologica/photo6_small.jpg" title="1207" alt="photo6_small.jpg" /></a></td>
@@ -187,7 +189,7 @@ Amadora</a></li>
 		<td class="thumbcell"><a href="AccaoPsicologica/verso19.html"><img src="AccaoPsicologica/verso19_small.jpg" title="1220-verso" alt="verso19_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/photo20.html"><img src="AccaoPsicologica/photo20_small.jpg" title="1221" alt="photo20_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="AccaoPsicologica/verso20.html"><img src="AccaoPsicologica/verso20_small.jpg" title="1221-verso" alt="verso20_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="AccaoPsicologica/notemverso2.html"><img src="AccaoPsicologica/notemverso2_small.jpg" title="1222 (não tem verso)" alt="notemverso2_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="AccaoPsicologica/notemverso2.html"><img src="AccaoPsicologica/notemverso2_small.jpg" title="1222 (nÃ£o tem verso)" alt="notemverso2_small.jpg" /></a></td>
 	</tr>
 	<tr>
 		<td class="thumbcell"><a href="AccaoPsicologica/photo21.html"><img src="AccaoPsicologica/photo21_small.jpg" title="1223" alt="photo21_small.jpg" /></a></td>
@@ -204,20 +206,20 @@ Amadora</a></li>
 <div id="index">
 	<table>
 	<tr>
-		<td class="thumbcell"><a href="CerimoniaEncerramento/encerramentodo26cursodecomandosprogramadacerimnia.html"><img src="CerimoniaEncerramento/encerramentodo26cursodecomandosprogramadacerimnia_small.jpg" title="1301 - Encerramento do 26º curso de comandos-Programa da cerimónia" alt="encerramentodo26cursodecomandosprogramadacerimnia_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="encerramentodo26cursodecomandos.html"><img src="CerimoniaEncerramento/encerramentodo26cursodecomandos_small.jpg" title="1302 - Encerramento do 26º curso de comandos" alt="encerramentodo26cursodecomandos_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="ocapitocunhalopesrecebeocrach.html"><img src="CerimoniaEncerramento/ocapitocunhalopesrecebeocrach_small.jpg" title="1303 - O capitão Cunha Lopes recebe o crachá" alt="ocapitocunhalopesrecebeocrach_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="oalferesloureirorecebeocrach.html"><img src="CerimoniaEncerramento/oalferesloureirorecebeocrach_small.jpg" title="1304 - O alferes Loureiro recebe o crachá" alt="oalferesloureirorecebeocrach_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="CerimoniaEncerramento/encerramentodo26cursodecomandosprogramadacerimnia.html"><img src="CerimoniaEncerramento/encerramentodo26cursodecomandosprogramadacerimnia_small.jpg" title="1301 - Encerramento do 26&ordm; curso de comandos-Programa da cerimÃ³nia" alt="encerramentodo26cursodecomandosprogramadacerimnia_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="encerramentodo26cursodecomandos.html"><img src="CerimoniaEncerramento/encerramentodo26cursodecomandos_small.jpg" title="1302 - Encerramento do 26Âº curso de comandos" alt="encerramentodo26cursodecomandos_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="ocapitocunhalopesrecebeocrach.html"><img src="CerimoniaEncerramento/ocapitocunhalopesrecebeocrach_small.jpg" title="1303 - O capitÃ£o Cunha Lopes recebe o crachÃ¡" alt="ocapitocunhalopesrecebeocrach_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="oalferesloureirorecebeocrach.html"><img src="CerimoniaEncerramento/oalferesloureirorecebeocrach_small.jpg" title="1304 - O alferes Loureiro recebe o crachÃ¡" alt="oalferesloureirorecebeocrach_small.jpg" /></a></td>
 	</tr>
 	<tr>
-		<td class="thumbcell"><a href="entregadocrach.html"><img src="CerimoniaEncerramento/entregadocrach_small.jpg" title="1305 - Entrega do crachá" alt="entregadocrach_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="entregadoguio2043cc.html"><img src="CerimoniaEncerramento/entregadoguio2043cc_small.jpg" title="1306 - Entrega do guião à 2043ª CC" alt="entregadoguio2043cc_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="desfilefinaldacompanhiadeinstruo.html"><img src="CerimoniaEncerramento/desfilefinaldacompanhiadeinstruo_small.jpg" title="1307 - Desfile final da companhia de instrução" alt="desfilefinaldacompanhiadeinstruo_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="entregadocrach.html"><img src="CerimoniaEncerramento/entregadocrach_small.jpg" title="1305 - Entrega do crachÃ¡" alt="entregadocrach_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="entregadoguio2043cc.html"><img src="CerimoniaEncerramento/entregadoguio2043cc_small.jpg" title="1306 - Entrega do guiÃ£o Ã  2043Âª CC" alt="entregadoguio2043cc_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="desfilefinaldacompanhiadeinstruo.html"><img src="CerimoniaEncerramento/desfilefinaldacompanhiadeinstruo_small.jpg" title="1307 - Desfile final da companhia de instruÃ§Ã£o" alt="desfilefinaldacompanhiadeinstruo_small.jpg" /></a></td>
 		<td class="thumbcell"><a href="ecosdaimprensaluandense.html"><img src="CerimoniaEncerramento/ecosdaimprensaluandense_small.jpg" title="1308 - Ecos da imprensa Luandense" alt="ecosdaimprensaluandense_small.jpg" /></a></td>
 	</tr>
 	<tr>
-		<td class="thumbcell"><a href="artigodarevistacomandos1parte.html"><img src="CerimoniaEncerramento/artigodarevistacomandos1parte_small.jpg" title="1309 - Artigo da revista COMANDOS 1ª parte" alt="artigodarevistacomandos1parte_small.jpg" /></a></td>
-		<td class="thumbcell"><a href="artigodarevistacomandos2parte.html"><img src="CerimoniaEncerramento/artigodarevistacomandos2parte_small.jpg" title="1310 - Artigo da revista COMANDOS 2ª parte" alt="artigodarevistacomandos2parte_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="artigodarevistacomandos1parte.html"><img src="CerimoniaEncerramento/artigodarevistacomandos1parte_small.jpg" title="1309 - Artigo da revista COMANDOS 1Âª parte" alt="artigodarevistacomandos1parte_small.jpg" /></a></td>
+		<td class="thumbcell"><a href="artigodarevistacomandos2parte.html"><img src="CerimoniaEncerramento/artigodarevistacomandos2parte_small.jpg" title="1310 - Artigo da revista COMANDOS 2Âª parte" alt="artigodarevistacomandos2parte_small.jpg" /></a></td>
 		<td class="thumbcell"></td>
 		<td class="thumbcell"></td>
 	</tr>
@@ -285,7 +287,7 @@ Amadora</a></li>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  A companhia de instru&ccedil;&atilde;o regressou ao CIC a Luanda, em meios auto, no  dia dez de Maio de mil novecentos e setenta e tr&ecirc;s.<br />
 Depois de um curto fim-de-semana, tiveram  lugar as cerim&oacute;nias de Imposi&ccedil;&atilde;o dos &ldquo;Crach&aacute;s&rdquo; e&nbsp; entrega do Gui&atilde;o da Companhia,&nbsp; no dia dezassete de Maio de mil novecentos e  setenta e tr&ecirc;s.<br />
 dia em que terminou o 26&ordm; curso de comandos.  Os novos militares comandos sa&iacute;dos deste curso, formaram duas companhias; a  2042&ordf; C.C. para actuar na RMA ( Regi&atilde;o Militar de Angola ) e a 2043&ordf; C.C. que  seguiu para a RMM ( Regi&atilde;o Militar de Mo&ccedil;ambique ).</p>
-            Constitu&iacute;da  no dia vinte e cinco de Maio de mil novecentos e setenta e tr&ecirc;s, a 2042<strong>&ordf;</strong>&nbsp;  C.C. ficou formada por seis grupos&nbsp;  de&nbsp; combate,&nbsp; duas&nbsp;  equipas&nbsp; de&nbsp; defesa&nbsp;  imediata e pelo pessoal da forma&ccedil;&atilde;o. Depois da constitui&ccedil;&atilde;o, a companhia  juntou-se no Grafanil, &agrave;s outras companhias de comandos ( 33&ordf;, 36&ordf; e 37&ordf; ) a  operarem na Zona Militar Norte (ZMN).
+   Constitu&iacute;da  no dia vinte e cinco de Maio de mil novecentos e setenta e tr&ecirc;s, a 2042<strong>&ordf;</strong>&nbsp;  C.C. ficou formada por seis grupos&nbsp;  de&nbsp; combate,&nbsp; duas&nbsp;  equipas&nbsp; de&nbsp; defesa&nbsp;  imediata e pelo pessoal da forma&ccedil;&atilde;o. Depois da constitui&ccedil;&atilde;o, a companhia  juntou-se no Grafanil, &agrave;s outras companhias de comandos ( 33&ordf;, 36&ordf; e 37&ordf; ) a  operarem na Zona Militar Norte (ZMN).
   <h2>&nbsp;</h2>
 <p><br>
 <br>
